# pkcs11-to-cmd

./: .clang-format  .editorconfig  .gitignore  .markdownlint.jsonc  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  README.md  REUSE.toml
.devcontainer/: devcontainer.json
badge/: coverage.json
docker/: Dockerfile
docs/: context-view.puml
src/: blind_implementations.hpp  consts.hpp  debug.cpp  debug.hpp  module.cpp  utils.cpp  utils.hpp
tests/: common.sh  convert_ssh-pubkey_to_pkcs8.py  runner.sh  test_openssl_sign_10MB.sh  test_pkcs11-tool_export_ec_public_key.sh  test_pkcs11-tool_export_ed25519_public_key.sh  test_pkcs11-tool_export_rsa_public_key.sh  test_pkcs11-tool_fails_when_given_slot_cert_is_missing.sh  test_pkcs11-tool_fails_when_given_slot_cert_is_not_a_x509.sh  test_pkcs11-tool_list_tokens.sh  test_pkcs11-tool_sign_ec_10MB.sh  test_pkcs11-tool_sign_expects_P2C_CMD_to_be_set.sh  test_pkcs11-tool_sign_expects_P2C_DATA_to_be_set.sh  test_pkcs11-tool_sign_expects_P2C_SIG_to_be_set.sh  test_pkcs11-tool_sign_fails_when_cmd_exits_with_neq_0.sh  test_pkcs11-tool_sign_fails_when_data_file_cannot_be_written.sh  test_pkcs11-tool_sign_fails_when_sig_file_does_not_exist.sh  test_pkcs11-tool_sign_fails_when_sig_file_exceeds_expected_size.sh  test_pkcs11-tool_sign_rsa_10MB.sh  test_pkcs11-tool_sign_sets_ec_mechanism.sh  test_pkcs11-tool_sign_sets_rsa_mechanism.sh  test_rauc_resign.sh  test_ssh-keygen_export_ec_public_key.sh  test_ssh-keygen_export_ed25519_public_key.sh  test_ssh-keygen_export_rsa_public_key.sh  test_ssh-keygen_sign_ec_sshcert.sh  (+2 more)
(+7 files in other folders)
